spilt SceneCollector.java back to all the Collect System due to priority system.